# ur5-door-interaction

./: .gitignore  .gitmodules  Dockerfile  README.md  ROS_Python_Cpp_Debugging_Tutorial.docx  build_docker_rvl-ur5.sh  run_docker.sh  run_docker_rvl-ur5.sh  rvl_ur5.Dockerfile
Helper3D-master/: demo_URDF.py  demo_ply_color.py  robotiq-3f-gripper_articulated.ply  robotiq-3f-gripper_articulated.urdf  robotiq-3f-gripper_articulated_collision.stl  robotiq-3f-gripper_articulated_collision_enlarged_10.stl  robotiq-3f-gripper_articulated_collision_enlarged_20.ply  robotiq-3f-gripper_articulated_collision_enlarged_5.stl  robotiq-3f-gripper_articulated_collision_with_plate.ply  robotiq-3f-gripper_articulated_collision_without_plate.stl
docker/: Dockerfile  build_docker.sh  run_docker.sh  run_docker_rvl-ur5.sh  rvl_ur5.Dockerfile
ferit_ur5_ws/: RVL_cfg_file.cfg  TERMINAL_COMMANDS_UR5.txt  T_T_B_handle.npy  cabinet.ply  cabinet.urdf  cabinet_handle_test.ply  cabinet_handle_test.urdf  cabinet_handle_test2.ply  cabinet_new.urdf  cabinet_old.urdf  cabinet_panel.ply  cabinet_static.ply  cabinet_whole.ply  cabinet_whole_old.ply  frames.gv  saved_trajectory.csv  saved_trajectory_cabinet_opening.csv  saved_trajectory_table.csv  sphere.urdf  test_cabinet.ply
ferit_ur5_ws/src/other/test_pkg/: CMakeLists.txt  package.xml
ferit_ur5_ws/src/other/test_pkg/scripts/: check_transform.py
ferit_ur5_ws/src/other/test_pkg/src/: test_node.cpp
human_segmentation_ws/: README.md
rvl-linux/: Cpp_Pybind11_Debug_Tutorial.docx  DD.txt  DDT.txt  DepthCamera_2025-03-14-13-52-22.json  RVLMotionDemo.cfg  RVLMotionDemo_Cupec.cfg  RVLMotionDemo_Cupec2.cfg  RVLMotionDemo_Cupec_exp1.cfg  RVLMotionDemo_Cupec_exp2.cfg  RVLMotionDemo_Cupec_real_robot.cfg  RVLMotionDemo_Cupec_real_robot_TSMC.cfg  RVLMotionDemo_Cupec_single_contact.cfg  RVLMotionDemo_Simundic.cfg  RVLMotionDemo_Touch_Cupec.cfg  RVLMotionDemo_Touch_Cupec2.cfg  RVLMotionDemo_Touch_Cupec_old.cfg  RVLRecognitionDemo.cfg  RVLRecognitionDemo_Cupec_DDD2_Detection.cfg  cabinets_examples.txt  cabinets_examples_all.txt  cabinets_examples_found_20.txt  cabinets_examples_old.txt  colchecks_FreeSDF_path_found.csv  colchecks_FreeSDF_path_not_found.csv  colchecks_Freeq_path_found.csv  colchecks_Freeq_path_not_found.csv  creating_pyton_modules_in_C++.odt  hyps.txt  makefile  nodes.txt  nodesJS.txt  (+8 more)
(+20289 files in other folders)
